# good-first-issue

./: .deepsource.toml  .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTION.md  CONTRIBUTORS.md  Contribution.md  DEVELOPMENT.md  Dockerfile  HOLY.txt  IMPROVEMENTS.md  LICENSE  Links.py  Makefile  README.md  README.pt-BR-completo.md  Read_me.md  bug_report.yml  bun-dev.err  bun.lockb  calculator_main.py  config.toml  cont.txt  contributing.md  experiment.txt  fix_missing_tags.py  git  holyentry.txt  inde.js  index.py  mobile_tracker.py  mypy.ini  now.json  nuxt.config.js  nuxt.config.ts  package-lock.json  (+22 more)
.do/: app.yaml
.github/: PULL_REQUEST_TEMPLATE.md  pr_template.md  stale.yml
SudokuPuzzle-Solution/: README.md  SudokuGUI.py  sudokutools.py
Website/: index.html  script.js  style,css
archetypes/: language.md
assets/: .gitkeep  app.scss  main.css
components/: About.vue  AddProjectModal.vue  AppView.vue  Banner.vue  DarkModeToggle.vue  Home.vue  LanguageTag.vue  Navbar.vue  Pagination.vue  RepoBox.vue  RepoSortBar.vue  SearchBar.vue  Sidebar.vue  SortButton.vue  SubscriptionForm.vue  ThemeToggle.vue
composables/: states.js  states.ts  useFilteredRepos.js  useRepositorySearch.js  useTheme.js
content/: what-is-good-first-issue.md
data/: generated.sample.json  labels.json  repositories.toml  sortOptions.json  sortbys.json  tags.sample.json
gfi/: config.py  curate.py  github_api.py  index.py  models.py  populate.py  sqlite_dao.py  tesing.py  test_data.py  tweet.py  tweet_new_repos.py  twitter_exception.py  utils.py
good-first-issue/: .deepsource.toml  .nvmrc  LICENSE  package.json
layouts/: AppLayout.vue  content.vue  default.vue  details.vue
middleware/: .gitkeep
pages/: Get_Started.vue  about.vue  index.vue
public/: site.webmanifest
scripts/: prepare-data.js
static/: sw.js
store/: index.js
types/: UserProfile.d.ts
utils/: sortUtils.js
vue-project/: package-lock.json  package.json
(+44 files in other folders)
