[tool.poetry]
name = "good-first-issue"
version = "0.1.0"
description = "https://goodfirstissue.dev"
license = "MIT"
authors = ["Sanket Saurav <sanket@deepsource.io>"]

[tool.poetry.dependencies]
python = "^3.12"
"github3.py" = "^4.0.1"
toml = "^0.10.2"
numerize = "^0.12"
emoji = "^0.6.0"
requests = "^2.23.0"
python-slugify = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
types-toml = "^0.10.8.7"
types-python-slugify = "^8.0.0.3"
loguru = "^0.7.2"
mypy = "^1.7.1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
